# magni_goals

./: CMakeLists.txt  package.xml  waypoints.csv
include/magni_goals/: magni_goals.h  read_csv.h
src/: magni_goals.cpp  main.cpp  read_csv.cpp
